fix: button align center

--- a/packages/mikado_reborn/src/components/Button/Button.scss
+++ b/packages/mikado_reborn/src/components/Button/Button.scss
@@ -25,6 +25,7 @@
     z-index: 0;
     flex-direction: row;
     align-items: center;
+    text-align: center;
     justify-content: center;
     padding: var(--padding);
     border-radius: 4px;
